--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="CSS/variables.css">
+  <link rel="stylesheet" href="CSS/index.css">
+  <script defer src="JS/auth.js"></script>
+  <script defer src="JS/books.js"></script>
+  <title>Online Library</title>
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <ul class="nav-bar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="books.html">Books</a></li>
+        <li><a href="login.html" id="login-link">Login</a></li>
+        <li><a href="register.html" id="register-link">Register</a></li>
+        <li><a href="dashboard.html" id="dashboard-link" style="display: none;">Dashboard</a></li>
+        <li><a href="admin.html" id="admin-link" style="display: none;">Admin Panel</a></li>
+        <li><a href="#" id="logout-link" style="display: none;">Logout</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero">
+      <h1>Welcome to the Online Library</h1>
+      <p>Find, borrow, and explore thousands of books.</p>
+    </section>
+
+    <section class="featured-books">
+      <h2>Featured Books</h2>
+      <div id="book-list" class="book-container">
+        <!-- Books will be dynamically inserted here by books.js -->
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Online Library. All rights reserved.</p>
+  </footer>
 </body>
 </html>
