--- a/frontend/pages/header.html
+++ b/frontend/pages/header.html
@@ -1,14 +1,18 @@
 <header>
-        <nav id="head_nav">
-            <h1 id="head_h1">
-                <img src="online-education.gif" alt="icon">
-                Online Library
-            </h1>
-            <ul id="nav_links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Browse Books</a></li>
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">Logout</a></li>
+    <div class="header-container">
+        <div class="logo">
+            <i class="fas fa-book-open"></i>
+            <span>none</span>
+        </div>
+        <nav>
+            <ul class="nav-bar">
+                <li><a href="#hero" class="active"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="#features"><i class="fas fa-info-circle"></i> About</a></li>
+                <li><a href="pages/books.html"><i class="fas fa-book"></i> Books</a></li>
+                <li><a href="pages/sign-in.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                <li><a href="pages/sign-up.html" id="register-link"><i class="fas fa-user-plus"></i> Register</a></li>
+                <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
+</header>
