--- a/frontend/pages/sign-in.html
+++ b/frontend/pages/sign-in.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="/css/forms-style.css">
+    <link rel="stylesheet" href="/frontend/CSS/forms-style.css">
     <title>Online-library</title>
 </head>
 <body>
@@ -42,7 +42,7 @@
                 <a href="#" id="toggle-form">Sign up</a>
             </div>
         </form>
-        <img src="/css/assets/man-reading-design.png" alt="man reading a book">
+        <img src="/frontend/CSS/assets/man-reading-design.png" alt="man reading a book">
     </section>
     
     <script>
