--- a/frontend/pages/sign-up.html
+++ b/frontend/pages/sign-up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/forms-style.css">
+    <link rel="stylesheet" href="/frontend/CSS/forms-style.css">
     <title>Online-library</title>
 </head>
 <body>
@@ -45,7 +45,7 @@
                 <a href="#" id="toggle-form">Sign in</a>
             </div>
         </form>
-        <img src="/css/assets/woman-reading-chair.png" alt="man reading a book">
+        <img src="/frontend/CSS/assets/woman-reading-chair.png" alt="man reading a book">
     </section>
     <script>
         document.getElementById("toggle-form").addEventListener("click", function(e) {
