--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="/frontend/CSS/_variables.css">
+    <link rel="stylesheet" href="/frontend/CSS/header.css">
+    <link rel="stylesheet" href="/frontend/CSS/footer.css">
+    <link rel="stylesheet" href="/frontend/CSS/index.css">
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,9 +40,6 @@
 
     <main>
       <section class="hero" id="hero">
-        <div class="hero-image">
-          <img src="CSS/assets/online-education.gif" alt="Books illustration">
-        </div>
         <div class="hero-content">
           <h1>Discover Your Next <span class="accent-text">Great
               Read</span></h1>
@@ -50,7 +50,9 @@
             <a href="register.html" class="btn secondary-btn">Sign Up Free</a>
           </div>
         </div>
-
+        <div class="hero-image">
+          <img src="CSS/assets/online-education.gif" alt="Books illustration">
+        </div>
       </section>
 
       <section class="features" id="features">
