--- a/frontend/pages/book_details.html
+++ b/frontend/pages/book_details.html
@@ -20,9 +20,9 @@
     <body class="bodyStyle">
         <header>
             <div class="header-container">
-                <div class="logo">
+                <div class="logo" >
                     <i class="fas fa-book-open"></i>
-                    <span>none</span>
+                    <span style="color: aliceblue;">none</span>
                 </div>
                 <nav>
                     <ul class="nav-bar">
@@ -42,7 +42,7 @@
         </header>
         <div class = "container">
             <div class="book-cover">
-                <img src="frontend\CSS\assets\book_cover.jpg">
+                <img src="../CSS/assets/book_cover.jpg">
             </div>
             <div class = "details">
                 <h1>Ice & Fire </h1>
