--- a/frontend/pages/book_details.html
+++ b/frontend/pages/book_details.html
@@ -34,10 +34,10 @@
                         <li><a href="pages/sign-up.html" id="register-link"><i class="fas fa-user-plus"></i> Register</a></li>
                     </ul>
                 </nav>
-                <label for="mobile-menu-checkbox" class="mobile-menu-toggle">
+                <!-- <label for="mobile-menu-checkbox" class="mobile-menu-toggle">
                     <i class="fas fa-bars"></i>
                     <i class="fas fa-times"></i>
-                </label>
+                </label> -->
             </div>
         </header>
         <div class = "container">
