--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
       <div class="header-container">
           <div class="logo">
               <i class="fas fa-book-open"></i>
-              <span>none</span>
+              <span style="color: var(--text-color);">none</span>
           </div>
           <nav>
               <ul class="nav-bar">
