--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/frontend/CSS/_variables.css">
-    <link rel="stylesheet" href="/frontend/CSS/header.css">
-    <link rel="stylesheet" href="/frontend/CSS/footer.css">
-    <link rel="stylesheet" href="/frontend/CSS/index.css">
+    <!-- <link rel="stylesheet" href="/frontend/CSS/_variables.css"> -->
+    <!-- <link rel="stylesheet" href="/frontend/CSS/header.css"> -->
+    <!-- <link rel="stylesheet" href="/frontend/CSS/footer.css"> -->
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +16,8 @@
     <link rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
     <title>Online Library</title>
+    <link rel="stylesheet" href="/frontend/CSS/index.css">
+
   </head>
   <body>
     <header>
