before submit the phase 1

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="/frontend/CSS/_variables.css"> -->
-    <!-- <link rel="stylesheet" href="/frontend/CSS/header.css"> -->
-    <!-- <link rel="stylesheet" href="/frontend/CSS/footer.css"> -->
+    <!-- <link rel="stylesheet" href="/CSS/_variables.css"> -->
+    <!-- <link rel="stylesheet" href="/CSS/header.css"> -->
+    <!-- <link rel="stylesheet" href="/CSS/footer.css"> -->
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
     <link rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
     <title>Online Library</title>
-    <link rel="stylesheet" href="/frontend/CSS/index.css">
+    <link rel="stylesheet" href="/CSS/index.css">
 
   </head>
   <body>
@@ -54,7 +54,8 @@
           <div class="hero-buttons">
             <a href="pages/sign-in.html" class="btn primary-btn">Sign in to see
               more books</a>
-            <a href="register.html" class="btn secondary-btn">Sign Up Free</a>
+            <a href="pages/sign-up.html" class="btn secondary-btn">Sign Up
+              Free</a>
           </div>
         </div>
         <div class="hero-image">
@@ -149,6 +150,10 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#books">Books</a></li>
             <li><a href="#features">features</a></li>
+            <li><a href="pages/add_edit.html">add edit</a></li>
+            <li><a href="pages/admin_dashboard.html">admin board</a></li>
+            <li><a href="pages/user_dashboard.html">User dash board</a></li>
+
           </ul>
         </div>
         <div class="footer-section">
